--- a/src/main/resources/static/button-register.html
+++ b/src/main/resources/static/button-register.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="./button-register.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="/static/style/button-register.css" th:href="@{/style/style.css}" />>
   <div class="button-register-container">
     <button type="button" class="button-register-button">
       Зарегистрироваться
