--- a/src/main/resources/static/button-enter.html
+++ b/src/main/resources/static/button-enter.html
@@ -1,5 +1,5 @@
 <div>
-  <link rel="stylesheet" type="text/css" href="/static/style/button-enter.css" th:href="@{/style/style.css}" />>
+  <link href="style/button-enter.css" rel="stylesheet" />
   <div class="button-enter-container">
     <button type="button" class="button-enter-button">
       <span>
