--- a/src/main/resources/static/button-enter.html
+++ b/src/main/resources/static/button-enter.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/button-enter.css" rel="stylesheet" />
+  <link href="./button-enter.css" rel="stylesheet" />
   <div class="button-enter-container">
     <button type="button" class="button-enter-button">
       <span>
