--- a/src/main/resources/static/button-sort.html
+++ b/src/main/resources/static/button-sort.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/button-sort.css" rel="stylesheet" />
+  <link href="./button-sort.css" rel="stylesheet" />
   <div class="button-sort-container">
     <button type="button" class="button-sort-button">Сортировать</button>
   </div>
