--- a/src/main/resources/static/footer.html
+++ b/src/main/resources/static/footer.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/footer.css" rel="stylesheet" />
+  <link href="./footer.css" rel="stylesheet" />
   <footer class="footer-footer">
     <span class="footer-text">
       <span>© 2022 С18-501, все права зарегистрированы.</span>
