--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/header.css" rel="stylesheet" />
+  <link href="./header.css" rel="stylesheet" />
   <header data-role="Header" class="header-header">
     <img
       alt="logo"
