--- a/src/main/resources/static/input.html
+++ b/src/main/resources/static/input.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/input.css" rel="stylesheet" />
+  <link href="./input.css" rel="stylesheet" />
   <div class="input-container">
     <input type="text" placeholder="placeholder" class="input-input input" />
   </div>
