--- a/src/main/resources/static/tool-box.html
+++ b/src/main/resources/static/tool-box.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/tool-box.css" rel="stylesheet" />
+  <link href="./tool-box.css" rel="stylesheet" />
   <div class="tool-box-container">
     <div class="tool-box-container1">
       <input
