--- a/src/main/resources/static/button-filter.html
+++ b/src/main/resources/static/button-filter.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/button-filter.css" rel="stylesheet" />
+  <link href="./button-filter.css" rel="stylesheet" />
   <div class="button-filter-container">
     <button type="button" class="button-filter-button">Фильтр</button>
   </div>
