--- a/src/main/resources/static/button-register.html
+++ b/src/main/resources/static/button-register.html
@@ -1,5 +1,5 @@
 <div>
-  <link href="style/button-register.css" rel="stylesheet" />
+  <link href="./button-register.css" rel="stylesheet" />
   <div class="button-register-container">
     <button type="button" class="button-register-button">
       Зарегистрироваться
