--- a/src/main/resources/static/button-sort.html
+++ b/src/main/resources/static/button-sort.html
@@ -1,6 +1,11 @@
 <div>
   <link href="./button-sort.css" rel="stylesheet" />
   <div class="button-sort-container">
-    <button type="button" class="button-sort-button">Сортировать</button>
+    <button type="button" class="button-sort-button">
+      <span>
+        <span>Сортировка</span>
+        <br />
+      </span>
+    </button>
   </div>
 </div>
